Revert "Install featuretracer"
This reverts commit e651618bd85a1dff0efc5f0f9ce041b0c71f6010.